--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-property-decorator": "^9.0.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
+    "vue-table-with-tree-grid": "^0.2.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
