--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "echarts": "^4.8.0",
     "element-ui": "^2.11.1",
     "lodash": "^4.17.19",
+    "mavon-editor": "^2.9.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-cropperjs": "^4.1.0",
     "vue-property-decorator": "^9.0.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
+    "vue-schart": "^2.0.0",
     "vue-table-with-tree-grid": "^0.2.4",
     "vuex": "^3.4.0"
   },
